# Google-Hash-Code-2018-Final-Round

./: README.md  validate.py  visualizer.py
.github/workflows/: CI.yml
output_files/sol1/: a_example.out  b_short_walk.out  c_going_green.out  d_wide_selection.out  e_precise_fit.out  f_different_footprints.out
output_files/sol2/: a_example.out  b_short_walk.out  c_going_green.out  d_wide_selection.out  e_precise_fit.out  f_different_footprints.out
sol1/: BuildingProject.h  CMakeLists.txt  CollisionMap.h  Data.h  SimulationState.h  Solver.h  main.cpp
sol2/: BuildingProject.h  CMakeLists.txt  CollisionMap.h  Data.h  Definitions.h  SimulationState.h  Solver.h  main.cpp
